--- a/package.json
+++ b/package.json
@@ -8,14 +8,18 @@
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "start": "vite"
+    "start": "vite",
+    "seed": "node scripts/seed.js -w server/server.js -w src"
   },
   "dependencies": {
     "axios": "^1.6.8",
     "express": "^4.19.2",
     "express-session": "^1.17.3",
+    "lodash": "^4.17.21",
     "morgan": "^1.10.0",
     "nodemon": "^3.0.1",
+    "pg": "^8.11.1",
+    "pg-hstore": "^2.3.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.23.1",
