--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "seed": "node scripts/seed.js -w server/server.js -w src"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.1",
     "axios": "^1.6.8",
+    "bcryptjs": "^2.4.3",
     "express": "^4.19.2",
     "express-session": "^1.17.3",
     "lodash": "^4.17.21",
@@ -23,6 +25,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.23.1",
+    "react-redux": "^9.1.0",
     "sequelize": "^6.32.1",
     "vite-express": "^0.16.0"
   },
