--- a/package.json
+++ b/package.json
@@ -24,8 +24,9 @@
     "pg-hstore": "^2.3.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.23.1",
+    "react-icons": "^5.2.1",
     "react-redux": "^9.1.0",
+    "react-router-dom": "^6.23.1",
     "sequelize": "^6.32.1",
     "vite-express": "^0.16.0"
   },
